--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		<pre class="alert alert-secondary">&lt;button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')"&gt;Copy and Callback&lt;/button&gt;</pre>
 
 		<div class="input-group mb-3">
-			<input type="text" class="form-control" value="Copy this text and execute callback" id="txtCopy3">
+			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
 			<div class="input-group-append">
 				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy and Callback</button>
 			</div>
