--- a/hi.html
+++ b/hi.html
@@ -1,5 +1,5 @@
 <div class="input-group mb-3">
 			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
 			<div class="input-group-append">
-				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy and Callback</button>
+				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
 			</div>
