--- a/non.html
+++ b/non.html
@@ -29,8 +29,29 @@
           <h1 class="heading-primary home-hero__heading-primary">
             <span class="heading-primary__sm"> Hello 👋</span>
             <span class="heading-primary__main">
-              I'm Steve! A Newyork Based Developer building life changing
-              digital Apps and changing the world
+             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+	
+	
+		</div>
+	
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
+			<div class="input-group-append">
+				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
+			</div>
+		</div>
+
+	</div>
+
+	<script src="src/CopyPasteJS.min.js"></script>
             </span>
           </h1>
       </div>
