--- a/non.html
+++ b/non.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+<head>
+	<meta charset="UTF-8">
+	<title>I LOVE YOU BEBE</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,21 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"
     />
-    <title>YES i LOVE YOU </title>
-  </head>
-  <body>
-    <header class="main-header">
-        </div>
-        <h4 class="main-header__logo-text"><img src="https://raw.githubusercontent.com/rockrudro/rockrudro.github.io/main/assets/logo.png" alt="logo" style="width:60px;height:50px;"></h4>
-    <!-- <button class="btn btn-theme btn-sm">Download CV</button> -->
-    </header>
-    <section id="home-hero" class="home-hero">
-      <div class="home-hero__content">
-        <div class="home-hero__info">
-          <h1 class="heading-primary home-hero__heading-primary">
-            <span class="heading-primary__sm"> Hello 👋</span>
-            <span class="heading-primary__main">
-             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -38,8 +25,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-	
-	
+	   <header class="main-header">
+        </div>
+        <h4 class="main-header__logo-text"><img src="https://raw.githubusercontent.com/rockrudro/rockrudro.github.io/main/assets/logo.png" alt="logo" style="width:60px;height:50px;"></h4>
+    <!-- <button class="btn btn-theme btn-sm">Download CV</button> -->
+    </header>
+
 		</div>
 	
 		<div class="input-group mb-3">
@@ -52,19 +43,5 @@
 	</div>
 
 	<script src="src/CopyPasteJS.min.js"></script>
-            </span>
-          </h1>
-      </div>
-      <div class="main-footer__bottom">
-        <div class="main-container">
-          <p class="main-footer__bottom-txt">
-            © Copyright 2022. Made by
-            <a href="https://rammaheshwari.com">Ram Maheshwari</a>
-          </p>
-        </div>
-      </div>
-    </footer>
-    <script src="./script.js"></script>
-  </body>
+</body>
 </html>
-navigator.clipboard.writeText("Hello World");
