--- a/non.html
+++ b/non.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
+	<meta charset="UTF-8">
+	<title>CopyPasteJS</title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+  
 * {box-sizing: border-box;}
 
 body { 
@@ -76,5 +89,17 @@ body {
   <p>Some content..</p>
 </div>
 
+		</div>
+	
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
+			<div class="input-group-append">
+				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
+			</div>
+		</div>
+
+	</div>
+
+	<script src="src/CopyPasteJS.min.js"></script>
 </body>
 </html>
