--- a/12.html
+++ b/12.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>CopyPasteJS</title>
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -13,9 +7,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
-<body>
-  
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
 * {box-sizing: border-box;}
 
 body { 
@@ -30,7 +24,7 @@ body {
 }
 
 .header a {
-  float: left;
+  float: center;
   color: black;
   text-align: center;
   padding: 12px;
@@ -41,13 +35,13 @@ body {
 }
 
 .header a.logo {
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
 }
 
 .header a:hover {
   background-color: #ddd;
-  color: black;
+  color: #00FF00;
 }
 
 .header a.active {
@@ -55,41 +49,21 @@ body {
   color: white;
 }
 
-.header-right {
-  float: right;
+.header-center {
+  float: center;
 }
 
-@media screen and (max-width: 500px) {
-  .header a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .header-right {
-    float: none;
-  }
 }
 </style>
 </head>
 <body>
 
 <div class="header">
-  <a href="#default" class="logo">CompanyLogo</a>
-  <div class="header-right">
-    <a class="active" href="#home">Home</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+  <a href="#default" class="logo">M Y U P I</a>
+  <div class="header-center">
   </div>
 </div>
-
-<div style="padding-left:20px">
-  <h1>Responsive Header</h1>
-  <p>Resize the browser window to see the effect.</p>
-  <p>Some content..</p>
 </div>
-
-		</div>
 	
 		<div class="input-group mb-3">
 			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
