--- a/hi.html
+++ b/hi.html
@@ -1,10 +1,3 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>CopyPasteJS</title>
-
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -14,8 +7,146 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<div class="input-group mb-3">
-			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
+    
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: center;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: #00FF00;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-center {
+  float: center;
+}
+
+}
+</style>
+</head>
+<body>
+
+<div class="header">
+  <a href="#default" class="logo">M Y U P I</a>
+  <div class="header-center">
+  </div>
+</div>
+<p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
+</div>
+	<p><b>UPI name - SABNUR PARVIN 👇👇👇</b></p>
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" value="ktb.xsabnurla192344@icici" id="txtCopy3">
 			<div class="input-group-append">
 				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
 			</div>
+		</div>
+</div>
+	<p><b>UPI name - NARISH ENTERPRISES 👇👇👇</b></p>
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" value="mswipe.1400170522001989@kotak" id="txtCopy3">
+			<div class="input-group-append">
+				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
+			</div>
+		</div>
+	<p><b>UPI name - REPAYMENT ALL 👇👇👇</b></p>
+		<div class="input-group mb-3">
+			<input type="text" class="form-control" value="easypay.7783999444@timecosmos" id="txtCopy3">
+			<div class="input-group-append">
+				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
+			</div>
+		</div>
+        	</div>
+
+        	<style>
+h1 {text-align: center;}
+</style>
+</head>
+<body>
+
+<h1>👇👇👇 QR CODE 👇👇👇</h1>
+	</div>
+
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
+</head>
+<body>
+<img src="/RPQR.jpg" alt="QR" style="width:50%;">
+
+	</div>
+
+	<script src="src/CopyPasteJS.min.js"></script>
+    
+<style>
+.all-browsers {
+  margin: 0;
+  padding: 5px;
+  background-color: lightgray;
+}
+
+.all-browsers > h1, .browser {
+  margin: 10px;
+  padding: 5px;
+}
+
+.browser {
+  background: white;
+}
+
+.browser > h2, p {
+  margin: 4px;
+  font-size: 90%;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<footer>
+  <p>Copyright - N E O<br>
+</footer>
+
+</body>
+</html>
