--- a/hi.html
+++ b/hi.html
@@ -95,7 +95,7 @@ h1 {text-align: center;}
 </head>
 <body>
 
-<h1>👇👇👇 QR CODE 👇👇👇</h1>
+<h1>👇 QR CODE 👇</h1>
 	</div>
 
 <style>
@@ -107,7 +107,7 @@ img {
 </style>
 </head>
 <body>
-<img src="/RPQR.jpg" alt="QR" style="width:50%;">
+<img src="/RPQR.jpg" alt="QR" style="width:150%;">
 
 	</div>
 
