--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@ body {
 		</div>
 		<br><br>
 		<br>
-		<h5 class="text-success">NARISH ENTERPRISES</h5>
-		<pre class="alert alert-secondary">mswipe.1400170522001989@kotak</pre>
+		<h5 class="text-success">NO UPI</h5>
+		<pre class="alert alert-secondary">NO UPI</pre>
 
 		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
 		<script>
 			
 			function copyText()
 			{
-				CopyPasteJS.copyText("mswipe.1400170522001989@kotak");
+				CopyPasteJS.copyText("NO UPI");
 			}
 
 		</script>
