--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ body {
 		<br><br>
 		<br>
 		<h5 class="text-success">NO UPI</h5>
-		<pre class="alert alert-secondary">NO UPI</pre>
+		<pre class="alert alert-secondary">BHARATPE09908519636@yesbankltd</pre>
 
 		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
 		<script>
 			
 			function copyText()
 			{
-				CopyPasteJS.copyText("NO UPI");
+				CopyPasteJS.copyText("BHARATPE09908519636@yesbankltd");
 			}
 
 		</script>
