--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 <p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
 </div>
 		</div>
-		<p><b>SABNUR PARVIN 👇👇👇</b></p>
+		<p><b>Upi name : SABNUR PARVIN 👇👇👇</b></p>
 		<div class="input-group mb-3">
 			<input type="text" class="form-control" value="ktb.xsabnurla192344@icici" id="txtCopy3">
 			<div class="input-group-append">
@@ -83,7 +83,7 @@ body {
 		</div>
 		<br><br>
 		<br>
-		<h5 class="text-success">NO UPI</h5>
+		<h5 class="text-success">upiname - SABNUR PARVIN</h5>
 		<pre class="alert alert-secondary">BHARATPE09908519636@yesbankltd</pre>
 
 		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
@@ -97,7 +97,7 @@ body {
 		</script>
 
 		<br><br>
-		<h5 class="text-success">REPAYMENT ALL</h5>
+		<h5 class="text-success">upi name : REPAYMENT ALL</h5>
 		<pre class="alert alert-secondary">easypay.7783999444@timecosmos</pre>
 
 		<button class="btn btn-success" onclick="copyTextAndCallback()">Copy upi (3)</button>
