--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ body {
 <p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
 </div>
 		</div>
-		<p><b>Upi name : SABNUR PARVIN 👇👇👇</b></p>
+		<p><b>Upi name : No upi👇👇👇</b></p>
 		<div class="input-group mb-3">
-			<input type="text" class="form-control" value="ktb.xsabnurla192344@icici" id="txtCopy3">
+			<input type="text" class="form-control" value="Noupi" id="txtCopy3">
 			<div class="input-group-append">
 				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI (1)</button>
 			</div>
