--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ body {
 <p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
 </div>
 		</div>
-		<p><b>Upi name : No upi👇👇👇</b></p>
+		<p><b>Upi name : Rana Enterprise 👇👇👇</b></p>
 		<div class="input-group mb-3">
-			<input type="text" class="form-control" value="Noupi" id="txtCopy3">
+			<input type="text" class="form-control" value="63280092922.payswiff@indus" id="txtCopy3">
 			<div class="input-group-append">
 				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI (1)</button>
 			</div>
@@ -84,14 +84,14 @@ body {
 		<br><br>
 		<br>
 		<h5 class="text-success">upi name - SABNUR PARVIN</h5>
-		<pre class="alert alert-secondary">BHARATPE09908519636@yesbankltd</pre>
+		<pre class="alert alert-secondary">ktb.xsabnurla192344@icici</pre>
 
 		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
 		<script>
 			
 			function copyText()
 			{
-				CopyPasteJS.copyText("BHARATPE09908519636@yesbankltd");
+				CopyPasteJS.copyText("ktb.xsabnurla192344@icici");
 			}
 
 		</script>
