--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@ body {
 		</div>
 		<br><br>
 		<br>
-		<h5 class="text-success">upi name - SABNUR PARVIN</h5>
-		<pre class="alert alert-secondary">ktb.xsabnurla192344@icici</pre>
+		<h5 class="text-success">upi name - unavailable</h5>
+		<pre class="alert alert-secondary">unavailable</pre>
 
 		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
 		<script>
 			
 			function copyText()
 			{
-				CopyPasteJS.copyText("ktb.xsabnurla192344@icici");
+				CopyPasteJS.copyText("unavailable");
 			}
 
 		</script>
