--- a/index.html
+++ b/index.html
@@ -74,31 +74,31 @@ body {
 <p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
 </div>
 		</div>
-		<p><b>Upi name : Rana Enterprise 👇👇👇</b></p>
+		<p><b>Upi Name : manju saha 👇👇👇</b></p>
 		<div class="input-group mb-3">
-			<input type="text" class="form-control" value="63280092922.payswiff@indus" id="txtCopy3">
+			<input type="text" class="form-control" value="dipankarchakma1977@okicici" id="txtCopy3">
 			<div class="input-group-append">
 				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI (1)</button>
 			</div>
 		</div>
 		<br><br>
 		<br>
-		<h5 class="text-success">upi name - SABNUR PARVIN</h5>
-		<pre class="alert alert-secondary">BHARATPE09908519636@yesbankltd</pre>
+		<h5 class="text-success">upi Name - Mithun Shil 👇</h5>
+		<pre class="alert alert-secondary">rahulchakma227@okicici</pre>
 
 		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
 		<script>
 			
 			function copyText()
 			{
-				CopyPasteJS.copyText("BHARATPE09908519636@yesbankltd");
+				CopyPasteJS.copyText("rahulchakma227@okicici");
 			}
 
 		</script>
 
 		<br><br>
-		<h5 class="text-success">upi name : REPAYMENT ALL</h5>
-		<pre class="alert alert-secondary">easypay.7783999444@timecosmos</pre>
+		<h5 class="text-success">upi Name : Sanat shil</h5>
+		<pre class="alert alert-secondary">maragsanat@okhdfcbank</pre>
 
 		<button class="btn btn-success" onclick="copyTextAndCallback()">Copy upi (3)</button>
 
@@ -106,7 +106,7 @@ body {
 			
 			function copyTextAndCallback()
 			{
-				CopyPasteJS.copyText("easypay.7783999444@timecosmos", function(){
+				CopyPasteJS.copyText("maragsanat@okhdfcbank", function(){
 					alert("Yes its done");
 				});
 			}
