--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ img {
 </style>
 </head>
 <body>
-<img src="/RPQR.jpg" alt="QR" style="width:100%;">
+<img src="/NOQR.jpg" alt="QR" style="width:100%;">
 
 	</div>
 
