--- a/12.html
+++ b/12.html
@@ -1,3 +1,9 @@
+
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>💙 Mobile Content Download Website</title>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -7,8 +13,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    
-<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 * {box-sizing: border-box;}
 
@@ -63,17 +71,93 @@ body {
   <div class="header-center">
   </div>
 </div>
+<p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
 </div>
-	
+		</div>
+		<p><b>Upi Name : manju saha 👇👇👇</b></p>
 		<div class="input-group mb-3">
-			<input type="text" class="form-control" value="hi there 01894090" id="txtCopy3">
+			<input type="text" class="form-control" value="dipankarchakma1977@okicici" id="txtCopy3">
 			<div class="input-group-append">
-				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI</button>
+				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI (1)</button>
 			</div>
 		</div>
+		<br><br>
+		<br>
+		<h5 class="text-success">upi Name - Mithun Shil 👇</h5>
+		<pre class="alert alert-secondary">rahulchakma227@okicici</pre>
 
-	</div>
+		<button class="btn btn-success" onclick="copyText()">Copy upi (2)</button>
+		<script>
+			
+			function copyText()
+			{
+				CopyPasteJS.copyText("rahulchakma227@okicici");
+			}
 
+		</script>
+
+		<br><br>
+		<h5 class="text-success">upi Name : Sanat shil</h5>
+		<pre class="alert alert-secondary">maragsanat@okhdfcbank</pre>
+
+		<button class="btn btn-success" onclick="copyTextAndCallback()">Copy upi (3)</button>
+
+		<script>
+			
+			function copyTextAndCallback()
+			{
+				CopyPasteJS.copyText("maragsanat@okhdfcbank", function(){
+					alert("Yes its done");
+				});
+			}
+
+		</script>
+
+	
 	<script src="src/CopyPasteJS.min.js"></script>
+</body>
+</html>
+        	</div>
+
+        	<style>
+h1 {text-align: center;}
+</style>
+</head>
+<body>
+<style>
+.all-browsers {
+  margin: 0;
+  padding: 5px;
+  background-color: lightgray;
+}
+
+.all-browsers > h1, .browser {
+  margin: 10px;
+  padding: 5px;
+}
+
+.browser {
+  background: white;
+}
+
+.browser > h2, p {
+  margin: 4px;
+  font-size: 90%;
+}
+
+footer {
+  text-align: center;
+  padding: 3px;
+  background-color: DarkSalmon;
+  color: white;
+}
+</style>
+</head>
+<body>
+
+<footer>
+  <p>Copyright - N E O<br>
+</footer>
+
 </body>
 </html>
