Update and rename 12.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>💙 Mobile Content Download Website</title>
+	<title>💙 indian Payment marchent Account</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
