--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
 		</script>
 
 	
-	<script src="src/CopyPasteJS.min.js"></script>
+	<script src="rockrudro.github.io/src/CopyPasteJS.min.js"></script>
 </body>
 </html>
         	</div>
