--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ body {
 <p><b>Hi Broh 🤘🏻</b><br>Thanks For Use Our SERVICE'S 💙</p>
 </div>
 		</div>
-		<p><b>Upi Name : manju saha 👇👇👇</b></p>
+		<p><b>Upi Name : Pintu Das 👇👇👇</b></p>
 		<div class="input-group mb-3">
-			<input type="text" class="form-control" value="dipankarchakma1977@okicici" id="txtCopy3">
+			<input type="text" class="form-control" value="Pijushg1996@okicici" id="txtCopy3">
 			<div class="input-group-append">
 				<button class="btn btn-success" data-copy-origin="#txtCopy3" data-copy-callback="alert('copied')">Copy UPI (1)</button>
 			</div>
